# RAF_Agentic_AI

./: .env.example  .gitignore  .replit  ARCHITECTURE.md  LICENSE  README.md  README_HF.md  ROADMAP.md  advanced_data_augmentation.py  app.py  arabic_processor.py  cleanup_codebase.py  config.py  crf_enhanced.py  data_augmentation.py  dataset_inspector.py  enhanced_model.py  enhanced_training_pipeline.py  entity_analyzer.py  evaluation_metrics.py  gazetteer_integration.py  gradio_interface.py  huggingface_model_analysis.py  improved_model_architecture.py  jordan_enhanced_scraper.py  jordan_gazetteer_scraper.py  main.py  model_comparison_study.py  model_ensemble.py  monitor_training.py  optimized_training.py  performance_optimizer.py  preprocessing.py  preprocessor_config.pkl  pyproject.toml  replit.nix  requirements-minimal.txt  requirements.txt  rules.py  run_augmentation_pipeline.py  (+12 more)
.streamlit/: secrets.toml.example
data/: __init__.py  state_licensing_data.py
hf_space/: app.py  performance_optimizer.py
src/: __init__.py  document_upload.py  project_manager.py
src/comparator/: __init__.py  state_comparator.py
src/core/: __init__.py  agent.py  burden_taxonomy.py  document.py
src/rewriter/: __init__.py  plain_language.py
src/scanner/: __init__.py  statute_scanner.py
